alignment issue corrected

--- a/index.css
+++ b/index.css
@@ -222,7 +222,7 @@ header {
     background-position: center right;
 }
 
-.section-title {
+.extra-section-title {
     color: #1d3a40;
     background-color: #d0b739;
     font-size: 3rem;
@@ -232,7 +232,8 @@ header {
     display: inline-block;
     padding: 10px 20px;
     border-radius: 10px;
-    margin-bottom: 50px;
+    margin: 0 0 50px 0; 
+    text-align: left;
 }
 
 .activities-list {
